fix artefact name

--- a/.github/workflows/linux-build-test-arm64.yml
+++ b/.github/workflows/linux-build-test-arm64.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: wheels
+          name: dist
           path: dist/*.whl
 
   linux-test-arm64:
