--- a/.github/workflows/windows-build-test-amd64.yml
+++ b/.github/workflows/windows-build-test-amd64.yml
@@ -51,7 +51,9 @@ jobs:
           path: dist
 
       - name: List files
-        run: ls -la dist
+        run: |
+          dir
+          dir dist
 
       - name: Install python-snap7
         run: |
