--- a/.github/workflows/publish-test-pypi.yml
+++ b/.github/workflows/publish-test-pypi.yml
@@ -71,16 +71,4 @@ jobs:
         run: |
           python3 -m venv venv
           venv/bin/pip install --upgrade pip
-          venv/bin/pip install -i https://test.pypi.org/simple/ python-snap7[test]
-
-      - name: Run pytest
-        run: |
-          venv/bin/pytest -m "server or util or client or mainloop"
-
-      - name: Run tests required sudo on Linux and macOS
-        if: ${{ runner.os == 'Linux' || runner.os == 'macOS'}}
-        run: sudo venv/bin/pytest -m partner
-
-      - name: On windows we don't need sudo
-        if: ${{ runner.os == 'Windows'}}
-        run: venv/bin/pytest  -m partner
+          venv/bin/pip install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
