--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -19,11 +19,11 @@ jobs:
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: osx-build-test-amd64.yml
-        path: dist
+        path: .
     - name: "Download Linux/amd64 artifacts"
       uses: dawidd6/action-download-artifact@v6
       with:
-        workflow: osx-build-test-amd64.yml
+        workflow: linux-build-test-amd64.yml
         path: .
     - name: "Download Linux/arm64 artifacts"
       uses: dawidd6/action-download-artifact@v6
@@ -45,11 +45,8 @@ jobs:
       with:
         path: dist
     - name: show dist layout
-      run: |
-        ls -al
-        ls -al dist
-        find dist
-    - name: Publish distribution 📦 to PyPI
+      run: find dist
+    - name: Publish distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
   test-pypi-packages:
     runs-on: ${{ matrix.os }}
@@ -71,16 +68,4 @@ jobs:
         run: |
           python3 -m venv venv
           venv/bin/pip install --upgrade pip
-          venv/bin/pip install python-snap7[test]
-
-      - name: Run pytest
-        run: |
-          venv/bin/pytest -m "server or util or client or mainloop"
-
-      - name: Run tests required sudo on Linux and macOS
-        if: ${{ runner.os == 'Linux' || runner.os == 'macOS'}}
-        run: sudo venv/bin/pytest -m partner
-
-      - name: On windows we don't need sudo
-        if: ${{ runner.os == 'Windows'}}
-        run: venv/bin/pytest  -m partner
+          venv/bin/pip install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
