--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,8 +7,18 @@
 
 alabaster==0.7.16
     # via sphinx
+apeye==1.4.1
+    # via sphinx-toolbox
+apeye-core==1.1.5
+    # via apeye
+autodocsumm==0.2.12
+    # via sphinx-toolbox
 babel==2.15.0
     # via sphinx
+beautifulsoup4==4.12.3
+    # via sphinx-toolbox
+cachecontrol[filecache]==0.14.0
+    # via sphinx-toolbox
 cachetools==5.3.3
     # via tox
 certifi==2024.7.4
@@ -21,36 +31,67 @@ click==8.1.7
     # via python-snap7 (pyproject.toml)
 colorama==0.4.6
     # via tox
+cssutils==2.11.1
+    # via dict2css
+dict2css==0.3.0.post1
+    # via sphinx-toolbox
 distlib==0.3.8
     # via virtualenv
 docutils==0.20.1
     # via
     #   sphinx
+    #   sphinx-prompt
     #   sphinx-rtd-theme
+    #   sphinx-tabs
+    #   sphinx-toolbox
+domdf-python-tools==3.9.0
+    # via
+    #   apeye
+    #   apeye-core
+    #   dict2css
+    #   sphinx-toolbox
+enum-tools[sphinx]==0.12.0
+    # via python-snap7 (pyproject.toml)
 exceptiongroup==1.2.1
     # via pytest
 filelock==3.15.4
     # via
+    #   cachecontrol
+    #   sphinx-toolbox
     #   tox
     #   virtualenv
+html5lib==1.1
+    # via sphinx-toolbox
 idna==3.7
-    # via requests
+    # via
+    #   apeye-core
+    #   requests
 imagesize==1.4.1
     # via sphinx
 iniconfig==2.0.0
     # via pytest
 jinja2==3.1.4
-    # via sphinx
+    # via
+    #   sphinx
+    #   sphinx-jinja2-compat
 markdown-it-py==3.0.0
     # via rich
 markupsafe==2.1.5
-    # via jinja2
+    # via
+    #   jinja2
+    #   sphinx-jinja2-compat
 mdurl==0.1.2
     # via markdown-it-py
+more-itertools==10.3.0
+    # via cssutils
+msgpack==1.0.8
+    # via cachecontrol
 mypy==1.10.1
     # via python-snap7 (pyproject.toml)
 mypy-extensions==1.0.0
     # via mypy
+natsort==8.4.0
+    # via domdf-python-tools
 packaging==24.1
     # via
     #   pyproject-api
@@ -59,6 +100,7 @@ packaging==24.1
     #   tox
 platformdirs==4.2.2
     # via
+    #   apeye
     #   tox
     #   virtualenv
 pluggy==1.5.0
@@ -67,27 +109,59 @@ pluggy==1.5.0
     #   tox
 pygments==2.18.0
     # via
+    #   enum-tools
     #   rich
     #   sphinx
+    #   sphinx-prompt
+    #   sphinx-tabs
 pyproject-api==1.7.1
     # via tox
 pytest==8.2.2
     # via python-snap7 (pyproject.toml)
 requests==2.32.3
-    # via sphinx
+    # via
+    #   apeye
+    #   cachecontrol
+    #   sphinx
 rich==13.7.1
     # via python-snap7 (pyproject.toml)
-ruff==0.5.0
+ruamel-yaml==0.18.6
+    # via sphinx-toolbox
+ruamel-yaml-clib==0.2.8
+    # via ruamel-yaml
+ruff==0.5.1
     # via python-snap7 (pyproject.toml)
+six==1.16.0
+    # via html5lib
 snowballstemmer==2.2.0
     # via sphinx
+soupsieve==2.5
+    # via beautifulsoup4
 sphinx==7.3.7
     # via
+    #   autodocsumm
+    #   enum-tools
     #   python-snap7 (pyproject.toml)
+    #   sphinx-autodoc-typehints
+    #   sphinx-prompt
     #   sphinx-rtd-theme
+    #   sphinx-tabs
+    #   sphinx-toolbox
     #   sphinxcontrib-jquery
+sphinx-autodoc-typehints==2.2.2
+    # via sphinx-toolbox
+sphinx-jinja2-compat==0.3.0
+    # via
+    #   enum-tools
+    #   sphinx-toolbox
+sphinx-prompt==1.8.0
+    # via sphinx-toolbox
 sphinx-rtd-theme==2.0.0
     # via python-snap7 (pyproject.toml)
+sphinx-tabs==3.4.5
+    # via sphinx-toolbox
+sphinx-toolbox==3.7.0
+    # via enum-tools
 sphinxcontrib-applehelp==1.0.8
     # via sphinx
 sphinxcontrib-devhelp==1.0.6
@@ -102,6 +176,8 @@ sphinxcontrib-qthelp==1.0.7
     # via sphinx
 sphinxcontrib-serializinghtml==1.1.10
     # via sphinx
+tabulate==0.9.0
+    # via sphinx-toolbox
 tomli==2.0.1
     # via
     #   mypy
@@ -116,8 +192,14 @@ types-click==7.1.8
 types-setuptools==70.2.0.20240704
     # via python-snap7 (pyproject.toml)
 typing-extensions==4.12.2
-    # via mypy
+    # via
+    #   domdf-python-tools
+    #   enum-tools
+    #   mypy
+    #   sphinx-toolbox
 urllib3==2.2.2
     # via requests
 virtualenv==20.26.3
     # via tox
+webencodings==0.5.1
+    # via html5lib
