--- a/.github/workflows/linux-build-test-amd64.yml
+++ b/.github/workflows/linux-build-test-amd64.yml
@@ -39,7 +39,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-24.04", "ubuntu-22.04", "ubuntu-20.04"]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
