--- a/.github/workflows/linux-test-with-deb.yml
+++ b/.github/workflows/linux-test-with-deb.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
         runs-on: ["ubuntu-20.04", "ubuntu-22.04", "ubuntu-24.04"]
     runs-on: ${{ matrix.runs-on }}
     steps:
