--- a/.github/workflows/publish-test-pypi.yml
+++ b/.github/workflows/publish-test-pypi.yml
@@ -56,8 +56,8 @@ jobs:
     needs: publish-to-testpypi
     strategy:
       matrix:
-        os: [ubuntu-24.04, ubuntu-22.04, ubuntu-20.04, macos-14, macos-12, windows-2022, windows-2019]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        os: ["ubuntu-24.04"," ubuntu-22.04", "ubuntu-20.04", "macos-12", "macos-13", "macos-14", "macos-15", "windows-2019", "windows-2022"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
