--- a/.github/workflows/windows-build-test-amd64.yml
+++ b/.github/workflows/windows-build-test-amd64.yml
@@ -34,7 +34,7 @@ jobs:
     strategy:
       matrix:
         os: [windows-2022, windows-2019]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
