--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         runs-on: [ "windows-2022", "windows-2019" ]
-        python-version: ["3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout
