--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,12 +16,12 @@ repos:
       - id: check-docstring-first
       - id: detect-private-key
 
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.10.0'
-    hooks:
-      - id: mypy
-        additional_dependencies: [types-setuptools, types-click]
-        files: ^snap7
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: 'v1.10.0'
+#    hooks:
+#      - id: mypy
+#        additional_dependencies: [types-setuptools, types-click]
+#        files: ^snap7
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
     rev: 'v0.4.2'
