--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,9 +33,9 @@ Homepage = "https://github.com/gijzelaerr/python-snap7"
 Documentation = "https://python-snap7.readthedocs.io/en/latest/"
 
 [project.optional-dependencies]
-test = ["pytest", "mypy", "types-setuptools", "ruff", "tox", "types-click"]
+test = ["pytest", "mypy", "types-setuptools", "ruff", "tox", "types-click", "uv"]
 cli = ["rich", "click" ]
-doc = ["sphinx", "sphinx_rtd_theme"]
+doc = ["sphinx", "sphinx_rtd_theme", "enum-tools[sphinx]"]
 
 [tool.setuptools.package-data]
 snap7 = ["py.typed", "lib/libsnap7.so", "lib/snap7.dll", "lib/libsnap7.dylib"]
