--- a/tox.ini
+++ b/tox.ini
@@ -18,31 +18,30 @@ commands =
 	# sudo pytest -m partner
 
 [testenv:mypy]
-basepython = python3.10
+basepython = python3.9
 deps = -r{toxinidir}/requirements-dev.txt
 skip_install = true
 commands = mypy {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
 
 [testenv:lint-ruff]
-basepython = python3.10
+basepython = python3.9
 deps = -r{toxinidir}/requirements-dev.txt
 commands =
   ruff check {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
   ruff format --diff {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
 [testenv:ruff]
-basepython = python3.10
+basepython = python3.9
 deps = -r{toxinidir}/requirements-dev.txt
 commands =
   ruff format {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
   ruff check --fix {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
 [testenv:requirements-dev]
-basepython = python3.10
+basepython = python3.9
 labels = requirements
-deps = pip-tools
+deps = uv
 skip_install = true
 setenv = CUSTOM_COMPILE_COMMAND='tox -e requirements-dev'
-commands =
-  pip-compile --upgrade --resolver backtracking --extra test,cli,doc --allow-unsafe pyproject.toml --output-file requirements-dev.txt
+commands = uv pip compile --upgrade --extra test --extra cli --extra doc --output-file=requirements-dev.txt pyproject.toml
