--- a/.github/workflows/osx-build-test-amd64.yml
+++ b/.github/workflows/osx-build-test-amd64.yml
@@ -48,6 +48,11 @@ jobs:
       matrix:
         os: ["macos-12", "macos-13", "macos-14", "macos-15"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+
+        exclude:
+          - os: "macos-12"
+            python-version: "3.13"
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
