--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,30 +1,35 @@
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.5.0
+    rev: v5.0.0
     hooks:
       - id: trailing-whitespace
       - id: end-of-file-fixer
       - id: check-ast
+      - id: check-shebang-scripts-are-executable
       - id: check-json
+      - id: check-symlinks
       - id: check-toml
       - id: check-xml
       - id: check-yaml
+      - id: check-illegal-windows-names
       - id: check-merge-conflict
       - id: debug-statements
       - id: check-builtin-literals
       - id: check-case-conflict
       - id: check-docstring-first
       - id: detect-private-key
+      - id: forbid-submodules
+      - id: mixed-line-ending
 
   - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.10.0'
+    rev: 'v1.13.0'
     hooks:
       - id: mypy
         additional_dependencies: [types-setuptools, types-click]
         files: ^snap7
 
   - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: 'v0.4.2'
+    rev: 'v0.7.2'
     hooks:
       - id: ruff
       - id: ruff-format
