--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ envlist =
     py310
     py311
     py312
+    py313
 isolated_build = true
 
 [testenv]
@@ -38,10 +39,9 @@ commands =
   ruff check --fix {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
 [testenv:requirements-dev]
-basepython = python3.10
+basepython = python3.9
 labels = requirements
-deps = pip-tools
+deps = uv
 skip_install = true
 setenv = CUSTOM_COMPILE_COMMAND='tox -e requirements-dev'
-commands =
-  pip-compile --upgrade --resolver backtracking --extra test,cli,doc --allow-unsafe pyproject.toml --output-file requirements-dev.txt
+commands = uv pip compile --upgrade --extra test --extra cli --extra doc --output-file=requirements-dev.txt pyproject.toml
