--- a/.github/workflows/osx-build-test-amd64.yml
+++ b/.github/workflows/osx-build-test-amd64.yml
@@ -9,7 +9,7 @@ jobs:
 
   osx-build:
     name: Build wheel for OSX
-    runs-on: macos-12
+    runs-on: macos-13
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -46,12 +46,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["macos-12", "macos-13", "macos-14", "macos-15"]
+        os: ["macos-13", "macos-14", "macos-15"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-
-        exclude:
-          - os: "macos-12"
-            python-version: "3.13"
 
     steps:
       - name: Checkout
