--- a/.github/workflows/osx-test-with-brew.yml
+++ b/.github/workflows/osx-test-with-brew.yml
@@ -9,10 +9,7 @@ jobs:
     strategy:
       matrix:
         python-version: [ "3.9", "3.10", "3.11", "3.12", "3.13" ]
-        runs-on: ["macos-12", "macos-13", "macos-14", "macos-15"]
-        exclude:
-          - os: "macos-12"
-            python-version: "3.13"
+        runs-on: ["macos-13", "macos-14", "macos-15"]
 
     runs-on: ${{ matrix.runs-on }}
     steps:
