--- a/.github/workflows/publish-test-pypi.yml
+++ b/.github/workflows/publish-test-pypi.yml
@@ -56,7 +56,7 @@ jobs:
     needs: publish-to-testpypi
     strategy:
       matrix:
-        os: ["ubuntu-24.04"," ubuntu-22.04", "ubuntu-20.04", "macos-12", "macos-13", "macos-14", "macos-15", "windows-2019", "windows-2022"]
+        os: ["ubuntu-24.04"," ubuntu-22.04", "ubuntu-20.04", "macos-13", "macos-14", "macos-15"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
@@ -72,3 +72,24 @@ jobs:
           python3 -m venv venv
           venv/bin/pip install --upgrade pip
           venv/bin/pip install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
+
+  test-pypi-package-windows:
+    runs-on: ${{ matrix.os }}
+    needs: publish-to-testpypi
+    strategy:
+      matrix:
+        os: ["windows-2019", "windows-2022"]
+        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+
+      - name: install python-snap7
+        run: |
+          pip.exe install --upgrade pip
+          pip.exe install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
