--- a/.github/workflows/linux-build-test-amd64.yml
+++ b/.github/workflows/linux-build-test-amd64.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   linux-build-amd64:
     name: Build wheel for linux AMD64
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-2.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -38,7 +38,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: ["ubuntu-24.04", "ubuntu-22.04", "ubuntu-20.04"]
+        os: ["ubuntu-24.04", "ubuntu-22.04"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
