--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -53,7 +53,7 @@ jobs:
     needs: publish-to-testpypi
     strategy:
       matrix:
-        os: ["ubuntu-24.04"," ubuntu-22.04", "ubuntu-20.04", "macos-13", "macos-14", "macos-15"]
+        os: ["ubuntu-24.04"," ubuntu-22.04", "macos-13", "macos-14", "macos-15"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
@@ -75,7 +75,7 @@ jobs:
     needs: publish-to-testpypi
     strategy:
       matrix:
-        os: ["windows-2019", "windows-2022"]
+        os: ["windows-2025", "windows-2022"]
         python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
     steps:
       - name: Checkout
