--- a/tox.ini
+++ b/tox.ini
@@ -3,11 +3,12 @@
 envlist =
     mypy,
     lint-ruff,
-    py39
-    py310
-    py311
-    py312
-    py313
+    py39,
+    py310,
+    py311,
+    py312,
+    py313,
+    docs
 isolated_build = true
 
 [testenv]
@@ -45,3 +46,7 @@ deps = uv
 skip_install = true
 setenv = CUSTOM_COMPILE_COMMAND='tox -e requirements-dev'
 commands = uv pip compile --upgrade --extra test --extra cli --extra doc --output-file=requirements-dev.txt pyproject.toml
+
+[testenv:docs]
+basepython = python3.10
+commands = sphinx-build -N -bhtml doc/ doc/_build
