Modernize CI/CD: switch to uv, fix Python 3.11+ compatibility (#576)
* Fix mock.patch compatibility with Python 3.11+

- Use mock.patch.object() instead of string-based mock.patch()
- Add cache_clear() call before mocking load_library
- Fixes AttributeError in TestLibraryIntegration tests

The string-based mock.patch() path resolution changed in Python 3.11+
(using pkgutil.resolve_name()), which can fail to find attributes that
were imported into a module from elsewhere.

See: https://github.com/python/cpython/issues/117860

* Modernize CI/CD: switch to uv and update Python versions

- Replace pip with uv across all GitHub Actions workflows
- Use astral-sh/setup-uv@v5 action for uv installation
- Update Python versions: drop 3.9 (EOL Oct 2025), add 3.14
- Update platform images to ubuntu-24.04 where appropriate
- Update pyproject.toml: requires-python >= 3.10
- Update tox.ini: py310-py314, use python3.13 for tools
- Update CLAUDE.md documentation to reflect new versions

Benefits of uv:
- Significantly faster package installation
- Better dependency resolution
- Modern Python packaging tool

* Remove macos-13 runner (retired) and complete uv migration

- Remove macos-13 from all workflow matrices (runner images retired)
- Update remaining publish workflows to use uv instead of pip
- Add Python 3.14 to publish workflow matrices
- Fix Windows Python versions (3.10-3.14)

* Add x86_64 cross-compile makefile for ARM64 runners

The macos-14 runner is ARM64, so we need cross-compile flags
to build x86_64 binaries for the universal binary.

* Fix lipo output path for macos-14 ARM64 runner

/usr/local/lib doesn't exist on macos-14 runners; use a local
path instead and copy the result to snap7/lib/.

* Simplify uv usage: remove explicit venv creation

uv automatically creates/uses .venv, so we can remove the
explicit `uv venv venv` steps and use `uv run` for execution.

* Add uv venv back - uv pip requires existing venv

uv pip install doesn't auto-create venv, so we need ex

--- a/.github/workflows/linux-build-test-amd64.yml
+++ b/.github/workflows/linux-build-test-amd64.yml
@@ -4,6 +4,9 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   linux-build-amd64:
     name: Build wheel for linux AMD64
@@ -27,7 +30,7 @@ jobs:
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: dist
+          name: dist-linux-amd64
           path: dist/*.whl
 
 
@@ -39,7 +42,7 @@ jobs:
     strategy:
       matrix:
         os: ["ubuntu-24.04", "ubuntu-22.04"]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -49,20 +52,26 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
       - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
-          name: dist
+          name: dist-linux-amd64
           path: dist
 
       - name: Install python-snap7
         run: |
-            python3 -m venv venv
-            venv/bin/pip install --upgrade pip
-            venv/bin/pip install pytest
-            venv/bin/pip install dist/*.whl
+            uv venv
+            uv pip install pytest
+            uv pip install dist/*.whl
 
+      # Use --no-project to prevent uv from syncing pyproject.toml,
+      # which would rebuild from source and lose the bundled snap7 library.
       - name: Run tests
         run: |
-            venv/bin/pytest -m "server or util or client or mainloop"
-            sudo venv/bin/pytest -m partner
+            uv run --no-project pytest -m "server or util or client or mainloop"
+            sudo .venv/bin/pytest -m partner
