--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -19,30 +19,36 @@ jobs:
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: osx-build-test-amd64.yml
-        path: .
+        name: dist-osx-universal
+        path: dist
     - name: "Download Linux/amd64 artifacts"
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: linux-build-test-amd64.yml
-        path: .
+        name: dist-linux-amd64
+        path: dist
     - name: "Download Linux/arm64 artifacts"
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: linux-build-test-arm64.yml
-        path: .
+        name: dist-linux-arm64
+        path: dist
     - name: "Download Windows artifacts"
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: windows-build-test-amd64.yml
-        path: .
+        name: dist-windows-amd64
+        path: dist
     - name: "Download source artifacts"
       uses: dawidd6/action-download-artifact@v6
       with:
         workflow: source-build.yml
-        path: .
+        name: dist-source
+        path: dist
     - name: Combine artifacts
       uses: actions/upload-artifact@v4
       with:
+        name: dist-combined
         path: dist
     - name: show dist layout
       run: find dist
@@ -53,8 +59,8 @@ jobs:
     needs: publish-to-testpypi
     strategy:
       matrix:
-        os: ["ubuntu-24.04"," ubuntu-22.04", "macos-13", "macos-14", "macos-15"]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        os: ["ubuntu-24.04", "ubuntu-22.04", "macos-14", "macos-15"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -64,11 +70,15 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
       - name: install python-snap7
         run: |
-          python3 -m venv venv
-          venv/bin/pip install --upgrade pip
-          venv/bin/pip install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
+          uv venv
+          uv pip install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
 
   test-pypi-package-windows:
     runs-on: ${{ matrix.os }}
@@ -76,7 +86,7 @@ jobs:
     strategy:
       matrix:
         os: ["windows-2025", "windows-2022"]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -86,7 +96,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
       - name: install python-snap7
         run: |
-          pip.exe install --upgrade pip
-          pip.exe install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
+          uv pip install --extra-index-url https://test.pypi.org/simple/ python-snap7[test]
