--- a/tox.ini
+++ b/tox.ini
@@ -1,47 +1,36 @@
-
 [tox]
 envlist =
     mypy,
     lint-ruff,
-    py39
     py310
     py311
     py312
     py313
+    py314
 isolated_build = true
 
 [testenv]
-deps = -r{toxinidir}/requirements-dev.txt
+extras = test
 allowlist_externals = sudo
 commands =
 	pytest -m "server or util or client or mainloop"
 	# sudo pytest -m partner
 
 [testenv:mypy]
-basepython = python3.10
-deps = -r{toxinidir}/requirements-dev.txt
-skip_install = true
+basepython = python3.13
+extras = test
 commands = mypy {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
-
 [testenv:lint-ruff]
-basepython = python3.10
-deps = -r{toxinidir}/requirements-dev.txt
+basepython = python3.13
+extras = test
 commands =
   ruff check {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
   ruff format --diff {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
 
 [testenv:ruff]
-basepython = python3.10
-deps = -r{toxinidir}/requirements-dev.txt
+basepython = python3.13
+extras = test
 commands =
   ruff format {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
   ruff check --fix {toxinidir}/snap7 {toxinidir}/tests {toxinidir}/example
-
-[testenv:requirements-dev]
-basepython = python3.9
-labels = requirements
-deps = uv
-skip_install = true
-setenv = CUSTOM_COMPILE_COMMAND='tox -e requirements-dev'
-commands = uv pip compile --upgrade --extra test --extra cli --extra doc --output-file=requirements-dev.txt pyproject.toml
