--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -4,24 +4,26 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   build:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.04
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Install Debian packages
-        run: |
-          sudo apt-get update -qq
-          sudo apt-get install -y python3-pip make
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: 3.12
+          python-version: "3.10"
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install dependencies
         run: |
-          python3 -m venv venv
-          venv/bin/pip install --upgrade pip
-          venv/bin/pip install ".[doc,cli]"
+          uv venv
+          uv pip install ".[doc,cli]"
       - name: Run doc
-        run:  venv/bin/sphinx-build -N -bhtml doc/ doc/_build -W
+        run: uv run sphinx-build -N -bhtml doc/ doc/_build -W
