--- a/.github/workflows/osx-test-with-brew.yml
+++ b/.github/workflows/osx-test-with-brew.yml
@@ -4,12 +4,15 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   osx_wheel:
     strategy:
       matrix:
-        python-version: [ "3.9", "3.10", "3.11", "3.12", "3.13" ]
-        runs-on: ["macos-13", "macos-14", "macos-15"]
+        python-version: [ "3.10", "3.11", "3.12", "3.13", "3.14" ]
+        runs-on: ["macos-14", "macos-15"]
 
     runs-on: ${{ matrix.runs-on }}
     steps:
@@ -17,12 +20,15 @@ jobs:
         uses: actions/checkout@v4
       - name: Install snap7
         run: brew install --overwrite snap7 python@${{ matrix.python-version }}
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
       - name: Install python-snap7
         run: |
-          python${{ matrix.python-version }} -m venv venv
-          venv/bin/python3 -m pip install --upgrade pip setuptools
-          venv/bin/python3 -m pip install -e .[test]
+          uv venv --python python${{ matrix.python-version }}
+          uv pip install -e ".[test]"
       - name: Run pytest
         run: |
-          venv/bin/pytest -m "server or util or client or mainloop"
-          sudo venv/bin/pytest -m partner
+          uv run pytest -m "server or util or client or mainloop"
+          sudo uv run pytest -m partner
