--- a/.github/workflows/windows-test.yml
+++ b/.github/workflows/windows-test.yml
@@ -4,12 +4,15 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   windows_wheel:
     strategy:
       matrix:
         runs-on: [ "windows-2022", "windows-2025" ]
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
+        python-version: ["3.10", "3.11", "3.12", "3.13", "3.14"]
     runs-on: ${{ matrix.runs-on }}
     steps:
       - name: Checkout
@@ -20,6 +23,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
+        with:
+          enable-cache: true
+
       - name: Prepare snap7 archive
         uses: ./.github/actions/prepare_snap7
 
@@ -29,7 +37,9 @@ jobs:
           Copy-Item snap7-full-1.4.2\release\Windows\Win64\snap7.dll C:\Windows\System32\.
 
       - name: Install python libraries
-        run: python3.exe -m pip install .[test]
+        run: |
+          uv venv
+          uv pip install ".[test]"
 
       - name: Run tests
-        run: python3 -m pytest -m "server or util or client or mainloop or partner"
+        run: uv run pytest -m "server or util or client or mainloop or partner"
